# prolog-hs

./: LICENSE  README.md  prolog.cabal
app/: Main.hs
src/Language/: Prolog.hs
src/Language/Prolog/: Parser.hs
test/: Spec.hs
