name:                prolog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tobpol/prolog-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Tobias Polock
maintainer:          example@example.com
copyright:           2017 Tobias Polock
category:            Prolog
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Prolog
                     , Language.Prolog.Parser
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , mtl
  default-language:    Haskell2010

executable prolog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , prolog
                     , haskeline
  default-language:    Haskell2010

test-suite prolog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , prolog
                     , hspec
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tobpol/prolog-hs
